# llvmint

./: Cargo.toml  README.md  allintrinsics.td
examples/: basic.rs
generator/: Cargo.toml
generator/src/: ast.rs  intrinsic.rs  main.rs
src/: lib.rs
tests/: x86.rs
