[package]

name = "llvmint"
version = "0.0.3"
authors = ["Huon Wilson <dbau.pp@gmail.com>", "Avi Weinstock <aweinstock314@gmail.com>"]

homepage = "https://github.com/aweinstock314/llvmint"
repository = "https://github.com/aweinstock314/llvmint"
documentation = "https://docs.rs/llvmint"
license = "MIT/Apache-2.0"
keywords = ["numerics", "simd", "llvm", "intrinsics"]
readme = "README.md"
description = """
Bindings to (almost) all LLVM intrinsics, for all platforms.
"""


[dependencies]
simdty = "0"

[features]
unstable = []
